--- a/static/home_page.html
+++ b/static/home_page.html
@@ -1,5 +1,16 @@
 {% extends 'layout.html' %}
 {% block body %}
+
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<ul class="flash">
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
+
 <p>Upload an image and the algorithm will tell you what it is!</p>
 
 <form action="/" method="post" enctype="multipart/form-data">
